...
        ),
        
        const SizedBox(height: 24),
        
        // Chronomètre
        Text(
          key: const Key('workout__text-2'),
          state.formattedTime,
          style: const TextStyle(
            color: Colors.black,
            fontSize: 160,
            fontWeight: FontWeight.w400,
          ),
        ),
        
        const SizedBox(height: 24),
        
        // Libellé de l'étape
        Text(
          key: const Key('workout__text-3'),
          _stepLabel(context, state),
          style: TextStyle(
            color: state.isPaused ? inactiveTextColor : AppColors.textActive,
            fontSize: 80,
            fontWeight: FontWeight.bold,
          ),
...
