...
      backgroundColor = hsl.withLightness(hsl.lightness * 0.4).toColor();
    }

    return Scaffold(
      backgroundColor: backgroundColor,
      body: GestureDetector(
        key: const Key('workout__container-1'),
        behavior: HitTestBehavior.opaque,
        onTap: () {
          // Tap sur l'écran pour afficher/masquer les contrôles
          state.onScreenTap();
        },
        child: SafeArea(
...
